Finish events recyclerview

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,13 @@ dependencies {
 
     //View model
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1")
+
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+
+    implementation "androidx.fragment:fragment-ktx:1.5.7"
+
+    implementation("io.coil-kt:coil:2.3.0")
+
+
 }
