--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,8 @@ dependencies {
     implementation("io.coil-kt:coil:2.3.0")
 
 
+    //Paging3
+    implementation("androidx.paging:paging-runtime:3.1.1")
+
+
 }
