--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,5 +74,7 @@ dependencies {
     //Paging3
     implementation("androidx.paging:paging-runtime:3.1.1")
 
+    //Pie chart
+    implementation "com.androidplot:androidplot-core:1.5.10"
 
 }
