--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 android.enableJetifier=true
+android.suppressUnsupportedCompileSdk=33
